/******************************************************************************
 * Marcel Mol: 20101113  (marcel@mesa.nl)
 *               Version 5.3.4
 *               Fix VERSION code
 *               From TeXLive:
 *               - DEFPAGER form /bin/more to more
 *               - kapthsea: fix bbug to handle input filenames without ".dvi".
 *               - kpathsea - use library function instead of duplicated code.
 *               - man page fixes
 *               - const char fixes
 * Marcel Mol: 20101030  (marcel@mesa.nl)
 *               Version 5.3.3
 *               included patches from TexLive and Joerg Prante, and Kenshi Muto
 *               minor cleanup/readability changes: note changes to -J -u -s options
 * Kenshi Muto: 25 Nov, 1999
 *               Add auto detect patch.
 *               Fix NTT JTeX DVI japanese patch.
 *               Add ASCII pTeX DVI japanese patch.
 * From TexLive distribution: october 2010
 *               'KPATHSEA' support
 *               Fix linspacing calculation bug
 *               Fix compile time warnings/cosmetics
 * Joerg Prante: 30nov2003 (prante@hbz-nrw.de)
 *               latin1 character handling with option '-u' using code by
 *               Simo Nikula (nikula@lut.fi)
 *               Thomas Sefzick (t.sefzick@fz-juelich.de)
 *               Updated help text according to latin1 patch.
 *               NOTE: this patch changes -u and -s option meanings!
 * Marcel Mol: 22jan2003  (Internet: marcel@mesa.nl)
 *		 From: jose@monkey.org: clearly state license (GPL).
 * Marcel Mol: 27may1996  (Internet: marcel@mesa.nl)
 *               From: mlemos@ua.pt (Manuel Lemos): Port to AMIGA.
 * Marcel Mol: 24mar1996  (Internet: marcel@mesa.nl)
 *               From: Alex Viskovatoff <av@mixcom.com>: Port to Macintosh
 *               From: Anton vd Repe  1995-6-9     (UUCP: arp@neabbs.uucp):
 *               Added option to skip translation of Scandinavian/Finnish