@@ -192,11 +192,16 @@ Toggle option to process the special Scandinavian characters that on most (?)
 terminals in Scandinavia are mapped to ``\{$|$\}[\bs ]''.
 Note this may interfere with -u. Best not to use -u and -s together.
 \item[{{\bf -J}}]
-Auto detect NTT JTeX and ASCII pTeX dvi format.
+Auto detect NTT JTeX, ASCII pTeX, and upTeX dvi format.
 \item[{{\bf -N}}]
 Display NTT JTeX dvi.
 \item[{{\bf -A}}]
 Display ASCII pTeX dvi.
+\item[{{\bf -U}}]
+Display upTeX dvi.
+\item[{{\bf -Eenc}}]
+Set output Japanese encoding. The enc argument 'e', 's', 'j', and 'u'
+denotes EUC-JP, Shift\_JIS, ISO-2022-JP, and UTF-8, respectively.
 \end{list}
 %
 %	NOTE --- No other files are used under VMS.
